--- a/CalorieCounter/FoodFormWindow.xaml
+++ b/CalorieCounter/FoodFormWindow.xaml
@@ -9,16 +9,18 @@
     <Grid>
         <Label Content="Food name:" HorizontalAlignment="Left" Margin="121,40,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="TitleBox" HorizontalAlignment="Left" Margin="198,45,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <Label Content="Calories:" HorizontalAlignment="Left" Margin="130,71,0,0" VerticalAlignment="Top"/>
+        <Label Content="Calories(100g):" HorizontalAlignment="Left" Margin="110,71,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="CaloriesBox" HorizontalAlignment="Left" Margin="198,75,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <Label Content="Protein:" HorizontalAlignment="Left" Margin="134,102,0,0" VerticalAlignment="Top"/>
+        <Label Content="Protein(g):" HorizontalAlignment="Left" Margin="134,102,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="ProteinBox" HorizontalAlignment="Left" Margin="198,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <Label Content="Carbs:" HorizontalAlignment="Left" Margin="138,137,0,0" VerticalAlignment="Top"/>
+        <Label Content="Carb(g)s:" HorizontalAlignment="Left" Margin="138,137,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="CarbsBox" HorizontalAlignment="Left" Margin="198,141,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <Label Content="Fat:" HorizontalAlignment="Left" Margin="142,175,0,0" VerticalAlignment="Top"/>
+        <Label Content="Fat(g):" HorizontalAlignment="Left" Margin="142,175,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="FatBox" HorizontalAlignment="Left" Margin="200,179,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
         <Label Content="Image:" HorizontalAlignment="Left" Margin="138,206,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="ImagePathBox" HorizontalAlignment="Left" Margin="200,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="318" />
+        <TextBox x:Name="ImagePathBox" HorizontalAlignment="Left" Margin="200,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="318" IsReadOnly="True"/>
+        <Button Content="Browse..." HorizontalAlignment="Left" Margin="528,210,0,0" VerticalAlignment="Top" Width="75" Click="BrowseImage_Click"/>
+
         <Label Content="Category:" HorizontalAlignment="Left" Margin="131,237,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="CategoryComboBox" DisplayMemberPath="CategoryTitle" SelectedValuePath="FoodCategoryId" Margin="197,241,457,155"/>
 
