--- a/CalorieCounter/BMICalculatorWindow.xaml
+++ b/CalorieCounter/BMICalculatorWindow.xaml
@@ -39,7 +39,15 @@
             <TextBox x:Name="WeightTextBox"/>
         </StackPanel>
 
-        <Button Grid.Row="4" Content="Calculate BMI" Click="CalculateBMI_Click" Margin="0,5"/>
+        <Button Grid.Row="4" Content="Calculate BMI" Click="CalculateBMI_Click" Margin="0,5">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFA4D5FA"/>
+                    <GradientStop Color="#FF7BB0BE" Offset="1"/>
+                    <GradientStop Color="#FFBAE2ED" Offset="0.527"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
         <TextBlock Grid.Row="5" x:Name="ResultTextBlock" FontWeight="Bold" FontSize="14" Margin="0,10,0,0"/>
     </Grid>
 </Window>
