--- a/CalorieCounter/FoodDetailsWindow.xaml
+++ b/CalorieCounter/FoodDetailsWindow.xaml
@@ -9,16 +9,16 @@
     <Grid Margin="10">
         <StackPanel>
             <Image Source="{Binding Image}" Width="200" Height="200" Margin="0,0,0,10"/>
-            <TextBlock Text="{Binding Title}" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
-            <TextBlock Text="{Binding Calories, StringFormat='Calories: {0} kcal/100g'}"/>
-            <TextBlock Text="{Binding Protein, StringFormat='Protein: {0}g/100g'}"/>
-            <TextBlock Text="{Binding Carbs, StringFormat='Carbs: {0}g/100g'}"/>
-            <TextBlock Text="{Binding Fat, StringFormat='Fat: {0}g/100g'}"/>
+            <TextBlock Text="{Binding Title}" FontSize="20" FontWeight="Bold" Margin="0,0,0,10" HorizontalAlignment="Center"/>
+            <TextBlock Text="{Binding Calories, StringFormat='Calories: {0} kcal/100g'}" HorizontalAlignment="Center" Foreground="#FF9E2020"/>
+            <TextBlock Text="{Binding Protein, StringFormat='Protein: {0}g/100g'}" HorizontalAlignment="Center" Foreground="#FF816565"/>
+            <TextBlock Text="{Binding Carbs, StringFormat='Carbs: {0}g/100g'}" HorizontalAlignment="Center" Foreground="#FFD18927"/>
+            <TextBlock Text="{Binding Fat, StringFormat='Fat: {0}g/100g'}" HorizontalAlignment="Center" Foreground="#FF197F9B"/>
 
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <TextBlock Text="Grams:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
+                <TextBlock Text="Grams:" VerticalAlignment="Center" Margin="0,0,5,0" Foreground="#FF2B9013"/>
                 <TextBox x:Name="GramsInput" Width="100"/>
-                <Button Content="Add to list" Margin="10,0,0,0" Click="AddToList_Click"/>
+                <Button Content="Add to list" Margin="10,0,0,0" Click="AddToList_Click" Background="#FFE3FFE6"/>
             </StackPanel>
         </StackPanel>
     </Grid>
