--- a/CalorieCounter/FoodFormWindow.xaml
+++ b/CalorieCounter/FoodFormWindow.xaml
@@ -21,7 +21,7 @@
         <Label Content="Fett(100g):" HorizontalAlignment="Left" Margin="189,191,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="FatBox" HorizontalAlignment="Left" Margin="273,199,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
         <Label Content="Foto:" HorizontalAlignment="Left" Margin="129,237,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="ImagePathBox" HorizontalAlignment="Left" Margin="180,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="318" IsReadOnly="True" Height="48"/>
+        <TextBox x:Name="ImagePathBox" HorizontalAlignment="Left" Margin="180,229,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="318" Height="48"/>
         <Button Content="durchsuchen..." Margin="514,243,194,0" VerticalAlignment="Top" Click="BrowseImage_Click"/>
 
         <Label Content="Kategorie:" HorizontalAlignment="Left" Margin="129,299,0,0" VerticalAlignment="Top"/>
@@ -29,7 +29,23 @@
 
 
 
-        <Button Content="speichern" Click="Save_Click" Margin="472,334,170,49"/>
+        <Button Content="speichern" Click="Save_Click" Margin="472,334,170,49">
+  <Button.Template>
+      <ControlTemplate TargetType="Button">
+          <Border CornerRadius="20" BorderThickness="1" BorderBrush="#FFA1A1A1" >
+              <Border.Background>
+                  <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                      <GradientStop Color="#FFEDF3B3" Offset="0.0"/>
+                      <GradientStop Color="#FFE2D089" Offset="1.0"/>
+                  </LinearGradientBrush>
+              </Border.Background>
+              <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </Border>
+      </ControlTemplate>
+  </Button.Template>
+  <Button.Foreground>Black</Button.Foreground>
+  <Button.FontWeight>Bold</Button.FontWeight>
+        </Button>
 
 
 
