--- a/CalorieCounter/Views/MainWindow.xaml
+++ b/CalorieCounter/Views/MainWindow.xaml
@@ -7,45 +7,96 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600"  Width="1000" ResizeMode="NoResize">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black"/>
+                <GradientStop Color="White" Offset="1"/>
+                <GradientStop Color="White" Offset="0"/>
+                <GradientStop Color="#FFC5AEAE" Offset="1"/>
+                <GradientStop Color="#FFE0BEBE" Offset="0.187"/>
+                <GradientStop Color="#FFF9F4F4" Offset="0.062"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="665*"/>
             <ColumnDefinition Width="311*"/>
             <ColumnDefinition Width="24*"/>
         </Grid.ColumnDefinitions>
 
-        <!--Database food-->
-        <ListView ItemsSource="{Binding Food}" SelectionMode="Single"
-          Name="FoodListView" MouseDoubleClick="FoodListView_MouseDoubleClick" Margin="170,120,9,98">
-            <ListView.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="White" Offset="1"/>
-                    <GradientStop Color="White" Offset="0"/>
-                    <GradientStop Color="#FFC5AEAE" Offset="1"/>
-                    <GradientStop Color="#FFE0BEBE" Offset="0.187"/>
-                    <GradientStop Color="#FFF9F4F4" Offset="0.062"/>
-                </LinearGradientBrush>
-            </ListView.Background>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Margin="5">
-                        <Image Source="{Binding Image}" Width="100" Height="100" Margin="5"/>
-                        <StackPanel Margin="5,0,0,0">
-                            <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14"/>
-                            <TextBlock Text="{Binding AllCategories}" FontStyle="Italic" Foreground="Gray"/>
-                        </StackPanel>
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <!-- Horizontal scrolling container with arrows -->
+        <Grid Margin="10,86,10,184" Grid.ColumnSpan="3">
+            <!-- Left Arrow -->
+            <Button Content="◄" Width="40" HorizontalAlignment="Left" VerticalAlignment="Center" 
+            Click="ScrollLeft_Click" Background="Transparent" FontSize="60" FontWeight="Bold"
+            BorderThickness="0" Foreground="orange"/>
+
+            <!-- Right Arrow -->
+            <Button Content="►" Width="40" HorizontalAlignment="Right" VerticalAlignment="Center" 
+            Click="ScrollRight_Click" Background="Transparent" FontSize="50" FontWeight="Bold"
+            BorderThickness="0" Foreground="Orange"/>
+
+            <!-- ScrollViewer with ListView -->
+            <ScrollViewer x:Name="FoodScrollViewer" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled"
+                  Margin="45,0,45,0" >
+                <ListView ItemsSource="{Binding Food}" SelectionMode="Single" ScrollViewer.CanContentScroll="False"
+                  Name="FoodListView" MouseDoubleClick="FoodListView_MouseDoubleClick" BorderThickness="0"
+                  Background="{x:Null}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" Height="261">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+
+                    <!-- Hover effect -->
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Margin" Value="5"/>
+                            <Setter Property="Padding" Value="5"/>
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+
+                            <Setter Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect ShadowDepth="0" BlurRadius="0"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#FFFDF3D3"/>
+                                    <Setter Property="Effect">
+                                        <Setter.Value>
+                                            <DropShadowEffect ShadowDepth="2" BlurRadius="10" Color="#FFFDF0BF"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Vertical" Margin="10" Width="140">
+                                <Image Source="{Binding Image}" Width="100" Height="150" HorizontalAlignment="Center" Margin="5"/>
+                                <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14" TextAlignment="Center"/>
+                                <TextBlock Text="{Binding AllCategories}" FontStyle="Italic" Foreground="Gray" TextAlignment="Center"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </ScrollViewer>
+        </Grid>
 
 
         <!--List of foods-->
 
-        <ListView ItemsSource="{Binding ListOfFoods}" Margin="96,191,10,11" BorderThickness="2,2,2,2" BorderBrush="LightYellow" Grid.Column="1" Grid.ColumnSpan="2">
-            <ListView.Background>
-                <ImageBrush ImageSource="https://img.freepik.com/free-photo/watercolor-pastel-background_23-2151891302.jpg?semt=ais_hybrid&amp;w=740"/>
-            </ListView.Background>
+        <ListView ItemsSource="{Binding ListOfFoods}" Margin="10,409,10,11" BorderThickness="2" BorderBrush="LightYellow" Grid.ColumnSpan="3" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Background="#FFE9D0D0">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Style.Triggers>
@@ -55,32 +106,31 @@
                     </Style.Triggers>
                 </Style>
             </ListView.ItemContainerStyle>
+
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="{Binding ImagePath}" Width="50" Height="50" Margin="5"/>
+                    <StackPanel Orientation="Vertical" Margin="5" Width="150">
+                        <Image Source="{Binding ImagePath}" Width="50" Height="50" Margin="5" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding Title}" FontWeight="Bold" TextAlignment="Center"/>
+
+                        <TextBlock Text="{Binding Calories, StringFormat='Kalorien: {0} kcal'}" TextAlignment="Center"/>
+
+                        <!-- Macros only if not an activity -->
                         <StackPanel>
-                            <TextBlock Text="{Binding Title}" FontWeight="Bold"/>
+                            <StackPanel.Style>
+                                <Style TargetType="StackPanel">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding IsActivity}" Value="True">
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </StackPanel.Style>
 
-                            <TextBlock Text="{Binding Calories, StringFormat='Kalorien: {0} kcal'}"/>
-
-                            <!-- Show macros only if IsActivity is false -->
-                            <StackPanel>
-                                <StackPanel.Style>
-                                    <Style TargetType="StackPanel">
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding IsActivity}" Value="True">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </StackPanel.Style>
-
-                                <TextBlock Text="{Binding Grams, StringFormat='Gramm: {0}g'}"/>
-                                <TextBlock Text="{Binding Protein, StringFormat='Protein: {0} g'}"/>
-                                <TextBlock Text="{Binding Carbs, StringFormat='Carbs: {0} g'}"/>
-                                <TextBlock Text="{Binding Fat, StringFormat='Fett: {0} g'}"/>
-                            </StackPanel>
+                            <TextBlock Text="{Binding Grams, StringFormat='Gramm: {0}g'}" TextAlignment="Center"/>
+                            <TextBlock Text="{Binding Protein, StringFormat='Protein: {0} g'}" TextAlignment="Center"/>
+                            <TextBlock Text="{Binding Carbs, StringFormat='Carbs: {0} g'}" TextAlignment="Center"/>
+                            <TextBlock Text="{Binding Fat, StringFormat='Fett: {0} g'}" TextAlignment="Center"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
@@ -88,14 +138,15 @@
         </ListView>
 
 
+
         <!--Buttons-->
 
-        <Button Content="Kalorien berechnen" Click="CalculateTotalCalories_Click" RenderTransformOrigin="2.202,4.078" Margin="290,508,129,10" FontSize="18" FontFamily="Verdana Pro Semibold">
+        <Button Content="Kalorien berechnen" Click="CalculateTotalCalories_Click" RenderTransformOrigin="2.202,4.078" Margin="416,366,49,165" FontSize="18" FontFamily="Verdana Pro Semibold">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
                     <GradientStop Color="#FFFAF5DE" Offset="1"/>
-                    <GradientStop Color="#FFF8DAFF" Offset="0"/>
+                    <GradientStop Color="#FFF7CCA5" Offset="0"/>
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
@@ -182,7 +233,7 @@
     DisplayMemberPath="CategoryTitle"
     SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"
     SelectionChanged="CategoryComboBox_SelectionChanged"
-    Margin="479,135,34,397" Background="#FFC8A5A5"/>
+    Margin="149,101,10,431" Background="#FFC8A5A5" Grid.Column="1"/>
         <Rectangle HorizontalAlignment="Left" Height="81" Stroke="Black" VerticalAlignment="Top" Width="1000" Fill="#FFEEE5E5" StrokeThickness="2" Panel.ZIndex="-6" Grid.ColumnSpan="3"/>
         <Label Content="Calorie Counter&#xD;&#xA;" HorizontalAlignment="Left" Margin="332,16,0,0" VerticalAlignment="Top" FontSize="36" FontFamily="Tw Cen MT Condensed Extra Bold" Height="58" Width="284" Background="{x:Null}" Foreground="#FFC39237"/>
 
